@@ -1,9 +1,9 @@
 require 'rubygems'
-require 'minitest/unit'
+require 'test/unit'
 require 'rdoc/parser'
 require 'rdoc/parser/ruby'
 
-class TestRDocParser < MiniTest::Unit::TestCase
+class TestRDocParser < Test::Unit::TestCase
   def test_can_parse
     assert_equal(RDoc::Parser.can_parse(__FILE__), RDoc::Parser::Ruby)
 
@@ -16,7 +16,9 @@ class TestRDocParser < MiniTest::Unit::TestCase
     assert_equal(RDoc::Parser.can_parse(readme_file_name), RDoc::Parser::Simple)
 
     binary_file_name = File.join(File.dirname(__FILE__), "binary.dat")
-    assert_equal(RDoc::Parser.can_parse(binary_file_name), nil)
+    assert_nil(RDoc::Parser.can_parse(binary_file_name))
+    empty_file_name = File.join(File.dirname(__FILE__), "empty.dat")
+    assert_not_nil(RDoc::Parser.can_parse(empty_file_name))
   end
 end
 
