@@ -1,3 +1,8 @@
+Mon Jul 27 10:24:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/parser.rb (RDoc::Parser.binary?): fix for empty files.
+	  [ruby-dev:38848]
+
 Sun Jul 26 19:17:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (argf_eof): go to the next file if called after ARGF.close
